[package]
name = "line-login-api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["uiuifree"]
description = "LineLoginApi for Rust"
license = "MIT"
keywords = ["Line", "LineLoginApi"]
readme="README.md"
repository = "https://github.com/uiuifree/rust-line-login-api"
[dependencies]

serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
reqwest = { version = "0.11"}

[dev-dependencies]
tokio = { version = "~1", features = ["full"] }
dotenv= "0.15.0"
